# AI_Voice_Agent_RAGAAI

./: .env.local_llama3_example  .gitignore  Dockerfile  README.md  docker-compose.yml  frontend_app.py  pyproject.toml  requirements.txt
agents/: api_agent.py  langchain_agent.py  scraping_agent.py  voice_pipeline.py
data_ingestion/: __init__.py  filings_scraper.py  market_data.py
docs/: ai_tool_usage.md
orchestrator/: main.py
retriever_agent/: __init__.py  retriever.py
streamlit_app/: app.py
templates/: index.html
tests/: test_api_agent.py  test_orchestrator.py  test_scraping_agent.py  test_voice_agent.py
uploads/: recording.webm
voice/: stt_tts.py
